--- a/flume-checkstyle/pom.xml
+++ b/flume-checkstyle/pom.xml
@@ -22,11 +22,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>18</version>
+    <artifactId>flume-parent</artifactId>
+    <groupId>org.apache.flume</groupId>
+    <version>1.8.0-SNAPSHOT</version>
   </parent>
-
+  
   <groupId>org.apache.flume</groupId>
   <artifactId>flume-checkstyle</artifactId>
   <version>1.8.0-SNAPSHOT</version>
