--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.flume</groupId>
 	<artifactId>flume-parent</artifactId>
-	<version>1.8.0-SNAPSHOT</version>
+	<version>1.8.0-maple-jdk7-SNAPSHOT</version>
+	
 	<packaging>pom</packaging>
 
 	<name>Apache Flume</name>
