--- a/pom.xml
+++ b/pom.xml
@@ -793,169 +793,169 @@
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-configuration</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-core</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-checkstyle</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-tools</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-node</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-file-channel</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-jdbc-channel</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-kafka-channel</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-spillable-memory-channel</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-recoverable-memory-channel</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-shared</groupId>
 				<artifactId>flume-shared-kafka-test</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 				<scope>test</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-hdfs-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-hive-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-http-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-irc-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-hbase-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-elasticsearch-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-morphline-solr-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-kafka-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-scribe-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-jms-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-twitter-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-legacy-sources</groupId>
 				<artifactId>flume-thrift-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-kafka-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-legacy-sources</groupId>
 				<artifactId>flume-avro-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-sdk</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-taildir-source</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-sdk</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 				<classifier>tests</classifier>
 				<scope>test</scope>
 			</dependency>
@@ -963,7 +963,7 @@
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-auth</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -975,14 +975,14 @@
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-clients</groupId>
 				<artifactId>flume-ng-log4jappender</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 				<classifier>jar-with-dependencies</classifier>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-embedded-agent</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -1196,7 +1196,7 @@
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-dataset-sink</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
