--- a/pom.xml
+++ b/pom.xml
@@ -364,12 +364,12 @@
 		<repository>
 			<id>releases</id>
 			<name>Nexus Release Repository</name>
-			<url>http://www.maplecloudy.com:9083/repository/maven-releases/</url>
+			<url>http://dn3.bid.bds.com:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Nexus Snapshot Repository</name>
-			<url>http://www.maplecloudy.com:9083/repository/maven-snapshots/</url>
+			<url>http://dn3.bid.bds.com:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 		<site>
 			<id>apache.website</id>
