--- a/flume-ng-channels/flume-file-channel/pom.xml
+++ b/flume-ng-channels/flume-file-channel/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>flume-ng-channels</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>1.8.0-maple-jdk7-SNAPSHOT</version>
+    <version>1.8.0-cdh6.0.1</version>
   </parent>
 
   <groupId>org.apache.flume.flume-ng-channels</groupId>
