--- a/flume-ng-sinks/flume-dataset-sink/pom.xml
+++ b/flume-ng-sinks/flume-dataset-sink/pom.xml
@@ -23,7 +23,7 @@ limitations under the License.
   <parent>
     <artifactId>flume-ng-sinks</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>1.8.0-maple-jdk7-SNAPSHOT</version>
+    <version>1.8.0-cdh6.0.1</version>
   </parent>
 
   <groupId>org.apache.flume.flume-ng-sinks</groupId>
@@ -121,12 +121,12 @@ limitations under the License.
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+    <!-- <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-minicluster</artifactId>
       <version>${hadoop2.version}</version>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
 
     <dependency>
       <groupId>org.slf4j</groupId>
