--- a/flume-ng-sources/flume-kafka-source/pom.xml
+++ b/flume-ng-sources/flume-kafka-source/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>flume-ng-sources</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>1.8.0-maple-jdk7-SNAPSHOT</version>
+    <version>1.8.0-cdh6.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
