--- a/flume-ng-sources/pom.xml
+++ b/flume-ng-sources/pom.xml
@@ -41,7 +41,7 @@ limitations under the License.
   </build>
 
   <modules>
-    <module>flume-scribe-source</module>
+    <!-- <module>flume-scribe-source</module> -->
     <module>flume-jms-source</module>
     <module>flume-twitter-source</module>
     <module>flume-kafka-source</module>
