--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,21 @@
 						<inherited>true</inherited>
 						<extensions>true</extensions>
 					</plugin>
-
+					<plugin>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<configuration>
+							<attach>true</attach>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 					<plugin>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<executions>
