--- a/flume-checkstyle/pom.xml
+++ b/flume-checkstyle/pom.xml
@@ -16,12 +16,12 @@
 	<parent>
 		<artifactId>flume-parent</artifactId>
 		<groupId>org.apache.flume</groupId>
-		<version>1.8.0-cdh6.0.1</version>
+		<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.apache.flume</groupId>
 	<artifactId>flume-checkstyle</artifactId>
-	<version>1.8.0-cdh6.0.1</version>
+	<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 	<name>Flume checkstyle project</name>
 
 	<properties>
