--- a/flume-ng-auth/pom.xml
+++ b/flume-ng-auth/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <artifactId>flume-parent</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>1.8.0-cdh6.0.1</version>
+    <version>1.8.0-cdh6.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>flume-ng-auth</artifactId>
