--- a/flume-ng-tests/pom.xml
+++ b/flume-ng-tests/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>flume-parent</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>1.8.0-cdh6.0.1</version>
+    <version>1.8.0-cdh6.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>flume-ng-tests</artifactId>
