--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
 	OF ANY KIND, either express or implied. See the License for the specific 
 	language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
 		<groupId>org.apache</groupId>
@@ -21,8 +20,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.flume</groupId>
 	<artifactId>flume-parent</artifactId>
-	<version>1.8.0-cdh6.0.1</version>
-	
+	<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
+
 	<packaging>pom</packaging>
 
 	<name>Apache Flume</name>
@@ -41,7 +40,7 @@
 		<siteUrlDeployment>file://people.apache.org/www/incubator.apache.org/flume</siteUrlDeployment>
 		<stagingDirectory>${project.basedir}/target/docs</stagingDirectory>
 
-		<avro.version>1.7.6-kf-cdh5.15.1</avro.version>
+		<avro.version>1.10.1-kf-cdh6.0.1</avro.version>
 		<checkstyle.plugin.version>2.17</checkstyle.plugin.version>
 		<checkstyle.tool.version>6.19</checkstyle.tool.version>
 		<elasticsearch.version>6.6.0</elasticsearch.version>
@@ -393,9 +392,7 @@
 
 	<build>
 
-		<plugins>
-
-		</plugins>
+		<plugins></plugins>
 
 		<pluginManagement>
 			<plugins>
@@ -492,7 +489,7 @@
 				<plugin>
 					<groupId>org.apache.avro</groupId>
 					<artifactId>avro-maven-plugin</artifactId>
-					<version>{avro.version}</version>
+					<version>${avro.version}</version>
 				</plugin>
 
 				<plugin>
@@ -635,6 +632,13 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro-ipc-netty</artifactId>
+				<version>${avro.version}</version>
+			</dependency>
+
 
 			<dependency>
 				<groupId>org.apache.thrift</groupId>
@@ -806,53 +810,53 @@
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-configuration</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-core</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-checkstyle</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-tools</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-node</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-file-channel</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-jdbc-channel</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-kafka-channel</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-channels</groupId>
 				<artifactId>flume-spillable-memory-channel</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -864,111 +868,111 @@
 			<dependency>
 				<groupId>org.apache.flume.flume-shared</groupId>
 				<artifactId>flume-shared-kafka-test</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 				<scope>test</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-hdfs-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-hive-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-http-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-irc-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-hbase-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-elasticsearch-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-morphline-solr-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sinks</groupId>
 				<artifactId>flume-ng-kafka-sink</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-scribe-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-jms-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-twitter-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-legacy-sources</groupId>
 				<artifactId>flume-thrift-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-kafka-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-legacy-sources</groupId>
 				<artifactId>flume-avro-source</artifactId>
-				<version>1.8.0-maple-jdk7-SNAPSHOT</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-sdk</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-sources</groupId>
 				<artifactId>flume-taildir-source</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-sdk</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 				<classifier>tests</classifier>
 				<scope>test</scope>
 			</dependency>
@@ -976,26 +980,26 @@
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-auth</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-clients</groupId>
 				<artifactId>flume-ng-log4jappender</artifactId>
-				<version>1.8.0-SNAPSHOT</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume.flume-ng-clients</groupId>
 				<artifactId>flume-ng-log4jappender</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 				<classifier>jar-with-dependencies</classifier>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.flume</groupId>
 				<artifactId>flume-ng-embedded-agent</artifactId>
-				<version>1.8.0-cdh6.0.1</version>
+				<version>1.8.0-cdh6.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -1213,9 +1217,9 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<repositories>  
-  <repository>  
-		
+	<repositories>
+		<repository>
+
 			<id>repo1.maven.org</id>
 			<url>http://repo1.maven.org/maven2</url>
 			<releases>
@@ -1236,7 +1240,7 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		
+
 		<repository>
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/content/repositories/releases</url>
